Signed-off-by: HNDITDushan <s.t.dushan@mail.com>

--- a/src/main/webapp/reportInstitution/report_own.xhtml
+++ b/src/main/webapp/reportInstitution/report_own.xhtml
@@ -32,7 +32,8 @@
                                 <p:panel header="7) Credit Company" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <h:panelGrid >                               
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Report By Item " action="report_opd_daily_summery_credit_department" /> 
-                                        <p:commandButton styleClass="linkButton" ajax="false" value="Report By Bill" action="report_opd_daily_summery_credit_department_by_bill" /> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Report By Bill" action="report_opd_daily_summery_credit_department_by_bill" />
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="Report By Bill(With Letter)" action="report_opd_credit_bill_by_credit_company_with_letter" />
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Credit Company Break Down" action="report_credit_category" /> 
 
                                     </h:panelGrid>
