--- a/src/main/webapp/resources/income_report/opd_new_with_credit.xhtml
+++ b/src/main/webapp/resources/income_report/opd_new_with_credit.xhtml
@@ -27,6 +27,8 @@
                 </h:outputLabel>
                 <h:outputLabel value=""><br/>
                 </h:outputLabel>
+                <h:outputLabel value="#{bookKeepingSummery.creditCompany.name}"><br/>
+                </h:outputLabel>
                 <h:outputLabel value="Credit Company OPD Collection."/>     
             </f:facet>
             <p:column  headerText="Category" >
