--- a/src/main/webapp/credit/credit_compnay_bill_opd_all.xhtml
+++ b/src/main/webapp/credit/credit_compnay_bill_opd_all.xhtml
@@ -21,7 +21,7 @@
                                 <f:selectItems value="#{enumController.paymentMethodsWithoutCredit}"/>
                                 <p:ajax process="cmbPs" update="creditCard cheque slip" event="change" />
                             </p:selectOneMenu>
-                            
+
                             <p:inputText value="#{cashRecieveBillController.comment}" id="comment"/>
                             <p:watermark value="Comment" for="comment"/>
 
@@ -38,7 +38,7 @@
                             </h:panelGroup>
 
                             <p:commandButton id="btnSettle" value="Settle" action="#{cashRecieveBillController.settleBill}"
-                                           ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;" onclick="onSubmitButton();">
+                                             ajax="false"  style="width: 150px; padding: 1px;border: 1px solid ; margin: auto;" onclick="onSubmitButton();">
                             </p:commandButton>
                             <p:defaultCommand target="btnSettle"/>
                             <p:commandButton value="New Bill" ajax="false" action="#{cashRecieveBillController.prepareNewBill()}" onclick="onSubmitButton();" >
@@ -60,24 +60,28 @@
                                 <p:column>
                                     <h:outputLabel value="#{ix.institutionCode}"/>
                                 </p:column>
-                                <f:ajax execute="@this" event="itemSelect" render="#{p:component('items')} tot" 
+                                <f:ajax execute="@this" event="itemSelect" render=":#{p:component('items')} :#{p:component('ins')} tot" 
                                         listener="#{cashRecieveBillController.selectInstitutionListener()}"/>
                             </p:autoComplete>                           
                         </h:panelGroup>
                         <p:dataTable value="#{cashRecieveBillController.billItems}"
                                      rowIndexVar="rowIndex"   var="b" id="items"
-                                     rowKey="#{b.searialNo}" selection="#{cashRecieveBillController.selectedBillItems}">
+                                     rowKey="#{b.searialNo}" selection="#{cashRecieveBillController.selectedBillItems}"
+                                     >
                             <f:facet name="header">
                                 <h:outputLabel value="Paying Institution : "/>
-                                <h:outputLabel value="#{cashRecieveBillController.institution.name}"/>
+                                <p:outputLabel value="#{cashRecieveBillController.institution.name}" id="ins"/>
                                 <p:commandButton ajax="false" action="#{cashRecieveBillController.removeAll()}" value="Remove Selected" onclick="onSubmitButton();"/>
                             </f:facet>       
 
-                            <p:column selectionMode="multiple" />                                        
-                            <f:facet name="header">
-                                <h:outputLabel value="Index No"/>                                  
-                            </f:facet>                              
-                                                      
+                            <p:column selectionMode="multiple"  />                                       
+                            <p:column>
+                                <f:facet name="header">
+                                    <h:outputLabel value="No"/>.                                  
+                                </f:facet>
+                                <h:outputLabel value="#{rowIndex+1}"/>
+                            </p:column>                              
+
                             <p:column >  
                                 <f:facet name="header">
                                     <h:outputLabel value="Bill No"/>                                    
