--- a/src/main/webapp/pharmacy/pharmacy_department_stock_by_batch_toupload.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_department_stock_by_batch_toupload.xhtml
@@ -134,7 +134,7 @@
                                     <f:facet name="header">
                                         <h:outputLabel value="Pack Unit"/>
                                     </f:facet>
-                                    <h:outputLabel value="" style="width: 100px!important;" ></h:outputLabel>
+                                    <h:outputLabel value="1 Pack" style="width: 100px!important;" ></h:outputLabel>
                                 </p:column>
                                 
                                 <p:column headerText="Distributor">
