--- a/src/main/webapp/hr/hr_reports.xhtml
+++ b/src/main/webapp/hr/hr_reports.xhtml
@@ -55,12 +55,16 @@
                                                          value="(8.1) Staff Salary Component(Bank Vise)" 
                                                          styleClass="linkButton"
                                                          actionListener="#{staffBasicController.makeItemNul()}"  />
+                                        <p:commandButton ajax="false" action="/hr/hr_report_staff_epf_etf_1"
+                                                         value="(9) EPF" 
+                                                         styleClass="linkButton"
+                                                         actionListener="#{staffBasicController.makeItemNul()}"  />
                                         <p:commandButton ajax="false" action="/hr/hr_report_staff_epf_etf"
-                                                         value="(9) EPF ETF" 
+                                                         value="(9.1) ETF" 
                                                          styleClass="linkButton"
                                                          actionListener="#{staffBasicController.makeItemNul()}"  />
                                         <p:commandButton ajax="false" action="/hr/hr_report_staff_epf_etf_to_export"
-                                                         value="(9.1) EPF ETF(Export)" 
+                                                         value="(9.2) EPF ETF(Export)" 
                                                          styleClass="linkButton"
                                                          actionListener="#{staffBasicController.makeItemNul()}"  />
                                         <p:commandButton ajax="false" action="/hr/hr_report_staff_salary_generate _or_not"
